blog article html added

--- a/blog-article.html
+++ b/blog-article.html
@@ -55,6 +55,110 @@
     </header>
 
     <main>
+        <section class="single-blog-section wind-section pt-5">
+            <div class="container">
+                <div class="breadcrumb-menu">
+                    <a href="./index.html">Home</a> / <a href="./blog.html">Blog</a> / <span>Article Name</span>
+                </div>
+                <div class="div-860">
+                    <div class="single-blog-content">
+                        <div class="blog-heading">
+                            <div class="blog-time">
+                                <p>JUNE 3, 2024</p>
+                                <div class="social-icon">
+                                    <span>SHARE ON:</span>
+                                    <a href="#"><img src="./img/icon/facebook.svg" alt=""></a>
+                                    <a href="#"><img src="./img/icon/linkedin.svg" alt=""></a>
+                                    <a href="#"><img src="./img/icon/x.svg" alt=""></a>
+                                    <a href="#"><img src="./img/icon/mail.svg" alt=""></a>
+                                </div>
+                            </div>
+                            <h2>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h2>
+                            <img src="./img/article-img.jpg" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p>2020 was quite the start to this decade for the construction industry. From COVID-19 to the materials shortages builders and contractor businesses faced, the 20s have brought their fair share of challenges.</p>
+                            <p>Looking forward, this article covers key construction industry trends 2024 brings to the market.</p>
+                            <p>More importantly, you’ll learn some strategies to keep you up to speed with these industry innovations.</p>
+                            <p>Here we go!</p>
+                            <h2>What construction industry trends should you watch out for?</h2>
+                            <h3>1. The rise of smart cities</h3>
+                            <p>The first trend to expect is the rise of smart, connected cities. This article by the Journal of Urban Technology explains smart cities as “high-tech intensive” urban solutions that connect people, data, and city elements to improve:</p>
+                            <ul>
+                                <li>Eco-friendliness.</li>
+                                <li>Economy.</li>
+                                <li>Quality of life for society.</li>
+                            </ul>
+                            <p>As smart cities become more common, construction projects become more complex.</p>
+                            <p>And by that, you can imagine more pedestrian sensors and WiFi-enabled lighting. Construction companies need to increase their technical know-how to stay on the same page as these developments.</p>
+                            <h5>How sustainability plays a role in the smart city</h5>
+                            <p class="fw-bold">It’s predicted that two-thirds of the world’s population will live in cities by 2050. There’s an obvious need for smart, sustainable cities.</p>
+                            <p class="fw-bold">A few roles that sustainability plays in the construction industry trend include:</p>
+                            <ul class="fw-bold">
+                                <li>Public transportation using real-time data and sensors to monitor high passenger volumes and accidents.</li>
+                                <li>“Smart roads” that reduce fuel costs and emissions.</li>
+                                <li>Waste management, which includes smart bins and data to improve garbage collection and waste audit. Not to mention, less fossil fuel use.</li>
+                                <li>The internet of things (IoT) to include sensors that measure air quality, noise levels, and energy.</li>
+                            </ul>
+                            <p class="fw-bold">Here’s what you’ll need to do with these insights:</p>
+                            <ul class="fw-bold">
+                                <li>Figure out what skills and equipment smart city development requires.</li>
+                                <li>Plan for this shift, including how your government might respond.</li>
+                            </ul>
+                            <h5>How to overcome this key construction industry trend</h5>
+                            <p>Education is key to preparing for the rise of smart cities. Even taking part in skills training early will pay off for professionals who want to own this niche.</p>
+                            <div class="social-icon">
+                                <span>SHARE ON:</span>
+                                <a href="#"><img src="./img/icon/facebook.svg" alt=""></a>
+                                <a href="#"><img src="./img/icon/linkedin.svg" alt=""></a>
+                                <a href="#"><img src="./img/icon/x.svg" alt=""></a>
+                                <a href="#"><img src="./img/icon/mail.svg" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="related-article">
+                    <h2>Related Articles</h2>
+                    <div class="blog-items">
+                        <div class="row gutter-32">
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="single-blog-item">
+                                    <a href="#" class="thumb-image">
+                                        <img src="./img/blog-item-1.jpg" alt="">
+                                    </a>
+                                    <a href="#" class="blog-title">
+                                        <span class="small">JUNE 3, 2024</span>
+                                        <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="single-blog-item">
+                                    <a href="#" class="thumb-image">
+                                        <img src="./img/blog-item-2.jpg" alt="">
+                                    </a>
+                                    <a href="#" class="blog-title">
+                                        <span class="small">JUNE 3, 2024</span>
+                                        <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="single-blog-item">
+                                    <a href="#" class="thumb-image">
+                                        <img src="./img/blog-item-3.jpg" alt="">
+                                    </a>
+                                    <a href="#" class="blog-title">
+                                        <span class="small">JUNE 3, 2024</span>
+                                        <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         
     </main>
 
