--- a/projects.html
+++ b/projects.html
@@ -72,117 +72,117 @@
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Connallon</a>
+                                        <a href="./project-details.html">Connallon</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Hoffman</a>
+                                        <a href="./project-details.html">Hoffman</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Penrick Barn</a>
+                                        <a href="./project-details.html">Penrick Barn</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="featured-tab-2">
-                            <div class="row featured-gutter">
+                            <div class="row gutter-32">
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Connallon</a>
+                                        <a href="./project-details.html">Connallon</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Hoffman</a>
+                                        <a href="./project-details.html">Hoffman</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Penrick Barn</a>
+                                        <a href="./project-details.html">Penrick Barn</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="featured-tab-3">
-                            <div class="row featured-gutter">
+                            <div class="row gutter-32">
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Connallon</a>
+                                        <a href="./project-details.html">Connallon</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Hoffman</a>
+                                        <a href="./project-details.html">Hoffman</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">Penrick Barn</a>
+                                        <a href="./project-details.html">Penrick Barn</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-4">
                                     <div class="single-featured-content">
                                         <img src="./img/featured-tab-img.png" alt="">
-                                        <a href="#">4 Moss Creek</a>
+                                        <a href="./project-details.html">4 Moss Creek</a>
                                     </div>
                                 </div>
                             </div>
