--- a/blog-article.html
+++ b/blog-article.html
@@ -64,16 +64,16 @@
                     <div class="single-blog-content">
                         <div class="blog-heading">
                             <div class="blog-time">
-                                <p>JUNE 3, 2024</p>
+                                <p class="mb-0">JUNE 3, 2024</p>
                                 <div class="social-icon">
-                                    <span>SHARE ON:</span>
+                                    <span class="small">SHARE ON:</span>
                                     <a href="#"><img src="./img/icon/facebook.svg" alt=""></a>
                                     <a href="#"><img src="./img/icon/linkedin.svg" alt=""></a>
                                     <a href="#"><img src="./img/icon/x.svg" alt=""></a>
                                     <a href="#"><img src="./img/icon/mail.svg" alt=""></a>
                                 </div>
                             </div>
-                            <h2>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h2>
+                            <h2 class="mb-4 pb-2">Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h2>
                             <img src="./img/article-img.jpg" alt="">
                         </div>
                         <div class="article-text">
@@ -105,8 +105,8 @@
                                 <li>Figure out what skills and equipment smart city development requires.</li>
                                 <li>Plan for this shift, including how your government might respond.</li>
                             </ul>
-                            <h5>How to overcome this key construction industry trend</h5>
-                            <p>Education is key to preparing for the rise of smart cities. Even taking part in skills training early will pay off for professionals who want to own this niche.</p>
+                            <h5 class="mb-5">How to overcome this key construction industry trend</h5>
+                            <p class="mb-5">Education is key to preparing for the rise of smart cities. Even taking part in skills training early will pay off for professionals who want to own this niche.</p>
                             <div class="social-icon">
                                 <span>SHARE ON:</span>
                                 <a href="#"><img src="./img/icon/facebook.svg" alt=""></a>
