--- a/blog.html
+++ b/blog.html
@@ -68,10 +68,10 @@
                     <div class="row gutter-32">
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-1.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -79,10 +79,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-2.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -90,10 +90,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-3.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -101,10 +101,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-4.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -112,10 +112,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-5.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -123,10 +123,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-6.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -134,10 +134,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-7.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -145,10 +145,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-8.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
@@ -156,10 +156,10 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="single-blog-item">
-                                <a href="#" class="thumb-image">
+                                <a href="./blog-article.html" class="thumb-image">
                                     <img src="./img/blog-item-9.jpg" alt="">
                                 </a>
-                                <a href="#" class="blog-title">
+                                <a href="./blog-article.html" class="blog-title">
                                     <span class="small">JUNE 3, 2024</span>
                                     <h5>Staying ahead of the curve: Strategies for keeping up with the latest construction industry trends</h5>
                                 </a>
