--- a/blog.html
+++ b/blog.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <div class="d-none d-lg-block py-3">
-                <ul class="topbar-content">
+            <div class="topbar">
+                <ul class="topbar-content py-3">
                     <li><span>License #1119328 </span></li>
                     <li><a href="tel:619-764 1550"><img src="./img/icon/phone.svg" alt="" class="me-2">619-764 1550</a></li>
                     <li><a href="mailto:info@WindwardConstructionLLC.com">info@WindwardConstructionLLC.com</a></li>
@@ -54,7 +54,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main-area">
         <section class="blog-feed-section wind-section pt-5">
             <div class="container">
                 <div class="blog-feed-heading">
