--- a/services.html
+++ b/services.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <div class="d-none d-lg-block py-3">
-                <ul class="topbar-content">
+            <div class="topbar">
+                <ul class="topbar-content py-3">
                     <li><span>License #1119328 </span></li>
                     <li><a href="tel:619-764 1550"><img src="./img/icon/phone.svg" alt="" class="me-2">619-764 1550</a></li>
                     <li><a href="mailto:info@WindwardConstructionLLC.com">info@WindwardConstructionLLC.com</a></li>
@@ -54,11 +54,12 @@
         </div>
     </header>
 
-    <main>
+    <main class="main-area">
         <section class="services-banner-section wind-section pt-0">
             <div class="container">
                 <div class="services-banner-content">
-                    <img src="./img/services-img.jpg" alt="">
+                    <img src="./img/services-img.jpg" alt="" class="d-none d-sm-block">
+                    <img src="./img/services-mobile-img.png" alt="" class="d-sm-none">
                     <div class="services-box">
                         <h5>Windward Construction offers a comprehensive range of construction services <span>designed to meet the diverse needs of clients</span> across various industries.</h5>
                     </div>
